<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="account_edit_pwd">Modify password</string>
    <string name="account_forget_password">Forget password</string>
    <string name="account_input_name">Enter the account number</string>
    <string name="account_input_new_paaswd">Please enter a new password</string>
    <string name="account_input_new_paaswd_again">Please confirm the new password</string>
    <string name="account_input_old_paaswd">Please enter the old password</string>
    <string name="account_input_password">Enter password</string>
    <string name="account_input_password_again">Confirm password</string>
    <string name="account_login">Log in</string>
    <string name="account_next">Next</string>
    <string name="account_register">Register</string>
    <string name="account_register_and_login">Register and Login</string>
    <string name="account_third_droi">Droi</string>
    <string name="account_third_login">Other login</string>
    <string name="account_third_qq">QQ</string>
    <string name="account_third_wechat">WeChat</string>
    <string name="account_third_weibo">Weibo</string>
    <string name="actionbar_title_edit_pwd">Change password</string>
    <string name="actionbar_title_help">Help manual</string>
    <string name="actionbar_title_login">Log in</string>
    <string name="actionbar_title_register">Register</string>
    <string name="actionbar_title_train">Training program</string>
    <string name="actionbar_title_wx_guide_page">WeChat access instructions</string>
    <string name="drink_notify_body1">After a night of sleep, the body began to dry. drinking water after getting up, it can help kidney and liver detoxification.</string>
    <string name="drink_notify_body2">Early morning from getting up to the company\'s process, the time is always particularly tight, emotional tension, the body will appear dehydration phenomenon, so arriving the office, first give yourself a glass of water.</string>
    <string name="drink_notify_body3">Work after a period of time from the air conditioning room, must take advantage of the up move, give yourself a day of the third glass of water, added loss of moisture, help relax mood of intense work.</string>
    <string name="drink_notify_body4">Drinking water before meals helps digestion and weight loss.</string>
    <string name="drink_notify_body5">After lunch to drink some water, can strengthen the body\'s digestive function.</string>
    <string name="drink_notify_body6">With a cup of water instead of Coffee or tea, Can be refreshing the mind.</string>
    <string name="drink_notify_body7">Drink a cup of water after dinner to increasing satiety, when eating dinner, it will not overeat.</string>
    <string name="drink_notify_body8">One to half an hour before going to bed，drinking a cup of water, then having a adequate intake of water. But don\'t drink too much at night, avioding taking a leak at night to affect sleep quality.</string>
    <string name="help_content1">Apple phones</string>
    <string name="help_content2">Android phones</string>
    <string name="help_content3">(Over iOS 8.0)</string>
    <string name="help_content4">(Over Android 4.4, BT 4.0)</string>
    <string name="help_content5">iPhone 4s、iPhone 5、iPhone 5s、iPhone 5c、iPhone 6、iPhone 6 Plus、 iPhone 6s、iPhone 6s Plus、iPhone 7、iPhone 7 Plus</string>
    <string name="help_content6">SAMSUNG：S3、S4、S5、S6、S7、Note3、Note4…… \nHUAWEI：P8、P9、Mate7、Mate S、Mate8、Honor8…… \nXIAOMI：MI3、MI4、MI5、Red MI2、Red MI3、Red MI Note2…… \nMEIZU：MX3、MX4、MX4 Pro、MX5 Pro、MEILAN Note…… \n……</string>
    <string name="help_item1_title">1. Supported phones</string>
    <string name="main_menu_target">%1$d consecutive days to complete plans</string>
    <string name="mine_about">About</string>
    <string name="mine_add_device">To add</string>
    <string name="mine_app_setting">Preference</string>
    <string name="mine_device_setting">Devices setting</string>
    <string name="mine_feedback">Feedback</string>
    <string name="mine_goal_setting">Goal setting</string>
    <string name="mine_more">More</string>
    <string name="mine_my_device">My device</string>
    <string name="mine_my_sport_goal">Sports goal</string>
    <string name="mine_no_device">No equipment</string>
    <string name="mine_third_options">Third-party access</string>
    <string name="mine_third_qq">QQ Sport</string>
    <string name="mine_third_wechat">WeChat motion</string>
    <string name="mine_vc_test">Spirometry</string>
    <string name="mine_water_reminder">Drink reminder</string>
    <string name="question_answer1">A：As the bracelet memory limit, hand ring can not be built-in Chinese font, so the hand ring can not handle Chinese characters, names and messages are not displayed. Our next-generation hand ring will be built-in Chinese font.</string>
    <string name="question_answer10">A：Connect the bracelet, enter the APP \"Mine\" - \"Device Settings\" - \"smart alarm clock\" can set the alarm clock on the hand ring. Set up, the Bluetooth does not have to connect, the ring can also ring the alarm clock.</string>
    <string name="question_answer11">A：If it is Andrews mobile phone. First APP link bracelet, APP \"Mine\" - \"Device Settings\" - \"message push\", open the message alert, and select the application to be reminded. If it is Apple phone. APP does not need to do any settings, to ensure that the corresponding application settings in the phone settings open, and the bracelet is properly connected, on it. If there is no reminder, it is recommended to enter the settings in the Bluetooth, find the bracelet, click the exclamation point, select Ignore the device, and then APP to re-link the bracelet. Pop-up matching box, be sure to select the pair.</string>
    <string name="question_answer12">A：You can leave feedback to the feedback, you can also go to the public in the message. But the public number of the message, can only be saved for two days, so if the public is not in time to get back, you can feedback in the feedback APP. Feedback information, try to leave more information: phone model, Andrews or iOS version number, firmware version number and so on.</string>
    <string name="question_answer13">A：OPPO R9Message notification can not be pushed, this phenomenon and the phone system, the old mobile phone system, there is no problem. Currently found there is a way, you can let the bracelet have a reminder.That is to open the phone\'s developer model. \nopen method is as follows:\nfirst enter the system on the phone, click on the \"version number\" menu, will prompt has entered the developer model, And then return to the settings, find the \"other settings\", enter the developer mode, and open the.</string>
    <string name="question_answer2">A：1. need to visit APP, and then from the APP \"Mine\" - \"WeChat campaign\" to enter, bind \"DroiHealth\" thepublic number. 2. Synchronize the movement data of the bracelet by APP. 3. If there is a cloud upload icon in the upper right corner of the home page, click this icon; if you do not have this icon, just in the APP\'s ranking page, drop-down refresh. So the number of steps to upload to the cloud, the number of steps can be synchronized to the WeChat movement.</string>
    <string name="question_answer3">A：Bluetooth is often disconnected, this is because Andrews system, will run against the background of the program to clean up, kill the larger memory applications. Mobile phone system in order to reduce power consumption, etc., will check the running background and occupation of memory, if the larger memory or power consumption, will force the closure of some applications. We recommend that you use the bracelet, you can not always open Bluetooth. (Because the connection is disconnected, APP will try to automatically return to the hand ring) when you need to use, and then open. Bluetooth mobile phone is closed, the bracelet can still remember step, monitoring sleep. Need to synchronize data, re-connect it. This can also save power consumption. If you want to stay connected for a long time, you need to lock the application, or join the white list and the like, to reduce the probability of APP killed by the system.</string>
    <string name="question_answer4">A：Settings, if you can search, we recommend that you open the phone gps, and then enter the APP to search for Bluetooth devices, try. If you can search to this time, you can turn off gps. At present Andrews 6.0 part of the model compatibility of this phenomenon.</string>
    <string name="question_answer5">A：QQ does not support healthy access, our engineers are seeking and QQ docking, hoping to achieve this functionality as soon as possible.</string>
    <string name="question_answer6">A：APP to connect the device, click the device, enter the view.</string>
    <string name="question_answer7">A：Go to APP, delete the device, and then search and connect the Bluetooth device again, and then perform the firmware upgrade again.</string>
    <string name="question_answer8">A：Only need to sleep with a hand ring at night, the next day to use APP link bracelet, synchronized about the data on it.</string>
    <string name="question_answer9">A：Time does not need to set, as long as the Bluetooth device and mobile phone APP connection, the Bluetooth device will automatically synchronize the phone\'s time.</string>
    <string name="question_title">2. Common problem</string>
    <string name="question_title1">Q：To call, M2 bracelet why not display the name?</string>
    <string name="question_title10">Q：How to set hand ring alarm clock?</string>
    <string name="question_title11">Q：How to open a message alert?</string>
    <string name="question_title12">Q：How to contact us?</string>
    <string name="question_title13">Q：OPPO R9Message can not be pushed?</string>
    <string name="question_title2">Q：How to synchronize motion data to WeChat motion?</string>
    <string name="question_title3">Q：Why Android phones Bluetooth frequently disconnected?</string>
    <string name="question_title4">Q：Why not search for Android phones bracelet?</string>
    <string name="question_title5">Q：How to synchronize the number of steps to QQ Sport?</string>
    <string name="question_title6">Q：How do I check the firmware version number?</string>
    <string name="question_title7">Q：Android phones, why not upgrade firmware?</string>
    <string name="question_title8">Q：How to monitor sleep quality?</string>
    <string name="question_title9">Q：How to set the bracelet time?</string>
    <string name="string_ok">OK</string>
    <string name="train_plan_first_5km">The first 5 km</string>
    <string name="train_plan_marathon">Beyond marathon</string>
    <string name="train_plan_run_advance">Advanced jogging plan</string>
    <string name="train_plan_run_primary">Jogging primary plan</string>
    <string name="train_plan_walk_primary">Walk the primary plan</string>
    <string name="userinfo_cancel">Cancel</string>
    <string name="userinfo_choose_photo">Choose from Album</string>
    <string name="userinfo_take_photo">Camera</string>
    <string name="wechart_hint_app">* In order to be able to upload the steps, the user is bound device in Droihealth 1.0, please first cancel DroiHealth Official Accounts,then rebinding equipment.</string>
    <string name="account_passwd_regular">\'\"&amp;&lt;&gt;!@#$%%^*()=+,.;:`~\|[]{}/?-_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>