<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:background="@color/divider_large_color" app:layout_width="match_parent" app:layout_height="match_parent">
    <com.zhuoyou.plugin.running.view.MyActionBar app:id="@+id/actionbar" app:custom_title="@string/actionbar_title_edit_pwd" style="@style/DefaultActionBar" />
    <AutoCompleteTextView app:id="@+id/user_old_passwd" app:layout_marginTop="48dp" app:hint="@string/account_input_old_paaswd" app:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" app:imeActionLabel="@string/account_next" app:imeActionId="@+id/next" style="@style/AccountPasswdEditText" />
    <EditText app:id="@+id/user_new_password" app:hint="@string/account_input_new_paaswd" app:digits="@string/account_passwd_regular" app:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" app:imeActionLabel="@string/account_next" app:imeActionId="@+id/next" style="@style/AccountPasswdEditText" />
    <EditText app:id="@+id/user_new_password_again" app:hint="@string/account_input_new_paaswd_again" app:digits="@string/account_passwd_regular" app:imeOptions="UNKNOWN_DATA_0x0" app:imeActionLabel="@string/string_ok" app:imeActionId="@+id/ok" style="@style/AccountPasswdEditText" />
    <TextView app:id="@id/btn_ok" app:layout_marginTop="46dp" app:text="@string/account_edit_pwd" app:onClick="onClick" style="@style/AccountButton" />
</LinearLayout>
