<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/user_scroll_view" android:background="@color/divider_large_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@color/main_style_background" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/mine_my_device" style="@style/SettingGroupTextView" />
        <LinearLayout android:id="@+id/btn_add_device" style="@style/MineItemLayout">
            <TextView android:text="@string/mine_no_device" android:drawableLeft="@drawable/ic_noequipment" style="@style/MineItemTitle" />
            <TextView android:text="@string/mine_add_device" style="@style/MineItemValue" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/device_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content"
            <LinearLayout android:id="@+id/device_info" style="@style/MineItemLayout">
                <ImageView android:id="@+id/device_logo" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_equipment" />
                <TextView android:textSize="@dimen/mine_item_title_textsize" android:textColor="@color/mine_item_title_color" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/device_name" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="@dimen/mine_item_drawablepadding" android:text="" />
                <ImageView android:id="@+id/img_update_point" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:src="@drawable/update_point" />
                <View android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/mine_item_title_textsize" android:textColor="#99a0a7" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/device_battery" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="20dp" android:text="" />
                <ImageView android:id="@+id/device_battery_img" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="20dp" />
                <ImageView android:id="@+id/connect_state" android:paddingRight="15dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/bt_state_connect" />
                <ImageView android:id="@+id/img_device_arrow" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/setting_right_arrow" />
            </LinearLayout>
            <View style="@style/MineDividerView" />
            <TextView android:id="@+id/device_setting" android:text="@string/mine_device_setting" android:drawableLeft="@drawable/ic_eq_setting" style="@style/MineItemTitleTextViewWithArrow" />
        </LinearLayout>
        <TextView android:textColor="0x1060000" android:id="@+id/tv_hint" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/SettingGroupTextView" />
        <TextView android:text="@string/mine_third_options" style="@style/SettingGroupTextView" />
        <TextView android:id="@+id/third_wechat" android:text="@string/mine_third_wechat" android:drawableLeft="@drawable/ic_wechat" style="@style/MineItemTitleTextViewWithArrow" />
        <View style="@style/MineDividerView" />
        <TextView android:id="@+id/third_wechat_guide" android:text="@string/actionbar_title_wx_guide_page" android:drawableLeft="@drawable/ic_wechat_guide" style="@style/MineItemTitleTextViewWithArrow" />
        <TextView android:textSize="11dp" android:textColor="0x1060000" android:id="@+id/tv_hint_wechart" android:paddingRight="12dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wechart_hint_app" style="@style/SettingGroupTextView" />
        <View style="@style/MineDividerView" />
        <TextView android:id="@+id/third_qq" android:visibility="visible" android:text="@string/mine_third_qq" android:drawableLeft="@drawable/ic_qq" style="@style/MineItemTitleTextViewWithArrow" />
        <TextView android:text="@string/mine_goal_setting" style="@style/SettingGroupTextView" />
        <LinearLayout android:id="@+id/mygoal_setting" style="@style/MineItemLayout">
            <TextView android:text="@string/mine_my_sport_goal" android:drawableLeft="@drawable/ic_motiontarget" style="@style/MineItemTitle" />
            <TextView android:id="@+id/tv_target_step" style="@style/MineItemValue" />
        </LinearLayout>
        <View style="@style/MineDividerView" />
        <TextView android:id="@+id/menu_target" android:text="@string/main_menu_target" android:drawableLeft="@drawable/ic_target" style="@style/MineItemTitleTextViewWithArrow" />
        <TextView android:text="@string/mine_more" style="@style/SettingGroupTextView" />
        <TextView android:id="@+id/mine_vc_test" android:text="@string/mine_vc_test" android:drawableLeft="@drawable/ic_lung" style="@style/MineItemTitleTextViewWithArrow" />
        <View style="@style/MineDividerView" />
        <TextView android:id="@+id/mine_item_preference" android:text="@string/mine_app_setting" android:drawableLeft="@drawable/ic_setting" style="@style/MineItemTitleTextViewWithArrow" />
        <View style="@style/MineDividerView" />
        <TextView android:id="@+id/mine_item_feedback" android:text="@string/mine_feedback" android:drawableLeft="@drawable/ic_feedback" style="@style/MineItemTitleTextViewWithArrow" />
        <View style="@style/MineDividerView" />
        <TextView android:id="@+id/btn_about" android:text="@string/mine_about" android:drawableLeft="@drawable/ic_about" style="@style/MineItemTitleTextViewWithArrow" />
    </LinearLayout>
</ScrollView>
