<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/main_style_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.zhuoyou.plugin.running.view.MyActionBar android:background="@color/background_color_main" android:custom_title="@string/actionbar_title_train" android:back_button_visibility="false" style="@style/DefaultActionBar" />
    <View android:layout_height="UNKNOWN_DATA_0x1401" style="@style/DividerLargeView" />
    <TextView android:id="@+id/btn_train_item1" android:text="@string/train_plan_walk_primary" android:drawableLeft="@drawable/ic_train_title1" style="@style/TrainFragmentTitleTextView" />
    <View style="@style/SettingDividerView" />
    <TextView android:id="@+id/btn_train_item2" android:text="@string/train_plan_run_primary" android:drawableLeft="@drawable/ic_train_title2" style="@style/TrainFragmentTitleTextView" />
    <View style="@style/SettingDividerView" />
    <TextView android:id="@+id/btn_train_item3" android:text="@string/train_plan_run_advance" android:drawableLeft="@drawable/ic_train_title3" style="@style/TrainFragmentTitleTextView" />
    <View style="@style/SettingDividerView" />
    <TextView android:id="@+id/btn_train_item4" android:text="@string/train_plan_first_5km" android:drawableLeft="@drawable/ic_train_title4" style="@style/TrainFragmentTitleTextView" />
    <View style="@style/SettingDividerView" />
    <TextView android:id="@+id/btn_train_item5" android:text="@string/train_plan_marathon" android:drawableLeft="@drawable/ic_train_title5" style="@style/TrainFragmentTitleTextView" />
    <View android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0" style="@style/DividerLargeView" />
</LinearLayout>
